working on the responsiveness

--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
    <main>
     <section id="hero">
         <div 
-        class="relative overflow-hidden py-20 bg-cover bg-no-repeat lg:h-[900px] h-[1400px] p-12 text-center"
+        class="relative overflow-hidden py-20 bg-cover bg-no-repeat lg:h-[900px] h-[1500px] p-12 text-center"
         style="background-image: url('img/tomato.jpg');">
         <div
         class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-fixed"
         style="background-color: rgba(0, 0, 0, 0.6)">
-        <div class="flex  flex-col lg:flex-row h-full lg:py-0 lg:px-0 py-20 px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
+        <div class="flex  flex-col lg:flex-row h-full lg:py-0 lg:px-0 py-20 px-10 lg:mt-0 mt-[200px] items-center justify-center mx-auto  lg:w-[80%] w-full">
             <!-- card -->
-            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full lg:-mt-[100px] sm:mt-[150px] mt-[130px] border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
+            <div class="border-2 pr-11 border-solid z-20 lg:w-[50%] w-full  border-r-0 shadow-lg border-t-color-primary border-t-8 border-l-color-primary border-l-8 border-b-0  bg-[rgba(0,0,0,0.5)] text-center py-20 px-5 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
                 <h3 class="text-xl font-bold py-4 text-color-primary">Goals of NAIMS</h3>
                 <p class="leading-relaxed">
                     NAIMS contributes to the sustainability of Nigeria's agricultural landscape. By promoting efficient resource utilization, reducing wastage, and optimizing production, it supports long-term sustainability goals.
@@ -103,7 +103,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 </p>
             </div>  
             <!-- card -->
-            <div class="border-2 border-solid z-10 pl-11 px-5 lg:w-[50%] w-full lg:mt-[200px] sm:mt-[150px] lg:mb-0 md:mb-0 sm:mb-10 mt-5 border-l-0 lg:-ml-[50px] ml-0 shadow-lg border-r-color-primary  border-r-8 border-t-0 border-b-color-primary border-b-8  bg-[rgba(0,0,0,0.5)] text-center py-20 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
+            <div class="border-2 border-solid z-10 pl-11 px-5 lg:w-[50%] w-full lg:mt-[200px] sm:mt-[150px] lg:mb-0 mb-[250px] mt-5 border-l-0 lg:-ml-[50px] ml-0 shadow-lg border-r-color-primary  border-r-8 border-t-0 border-b-color-primary border-b-8  bg-[rgba(0,0,0,0.5)] text-center py-20 rounded-2xl cursor-pointer hover:bg-[rgba(0,0,0,0.7)] ease-in duration-200">
                 <h3 class="text-xl font-bold py-4 text-color-primary">Aim of NAIMS</h3>
                 <p class="leading-relaxed">
                     NAIMS aims to centralize agricultural data from various sources, including farms, research institutions, and government agencies. This centralized data repository facilitates efficient data management and analysis.
@@ -116,7 +116,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
     </section>
     <section id="search" class="bg-white py-3">
         <div class="container py-5">
-            <h1 class="text-black font-bold text-center text-4xl py-5 pb-10">Explore Agriculture's Bounty: Find, Discover, Learn, and Produce</h1>
+            <h1 class="text-black font-bold text-center lg:text-4xl text-3xl leading-10 py-5 pb-10">Explore Agriculture's Bounty: Find, Discover, Learn, and Produce</h1>
             <div class="text-center m-auto rounded-full mb-20 md:w-2/3">
             <form action="" method="post" class="w-full bg-color-primary h-[50px] rounded-full flex justify-between items-center">
                 <input type="text" placeholder="Search by Keyword" class="w-[80%] h-full border-2 text-black border-color-primary pl-5 rounded-l-full outline-none">
@@ -170,28 +170,28 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         <div
         class="absolute bottom-0 left-0 right-0 top-0 h-full w-full overflow-hidden bg-fixed"
         style="background-color: rgba(197, 187, 187, 0.6)">
-        <div class=" bg-black opacity-50 py-5 px-20">
+        <div class=" bg-black opacity-50 py-5 lg:px-20 px-5">
             <h1 class="text-color-primary lg:text-4xl p-5 mt-10 font-bold">Stay Updated with <span class="text-yellow-500">Our Latest Content</span></h1>
             <p class="text-white font-medium text-xl text-left">NAIMS is a cutting-edge platform designed to revolutionize Nigeria's agricultural landscape. It offers a centralized hub for comprehensive agricultural data, providing valuable insights to farmers, researchers, and policymakers.</p>
             <p class="text-white font-medium text-xl text-left">With NAIMS, you can access the latest trends, make informed decisions, and contribute to the growth and sustainability of Nigeria's vibrant agricultural sector.</p>
         </div>
-        <div class="flex  flex-col lg:flex-row h-full -mt-[120px] lg:px-0  px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
+        <div class="flex  flex-col lg:flex-row h-full lg:-mt-[120px] -mt-[250px] lg:px-0  px-10  items-center justify-center mx-auto  lg:w-[80%] w-full">
         <div class="grid lg:grid-cols-3 grid-cols-1 gap-6">
     <div class="col-span-2">
-        <div class="carousel-container">
-            <div class="carousel-slide">
+        <div class="carousel-container h-full w-full">
+            <div class="carousel-slide h-full w-full">
                 <img src="img/guine_corn.jpg" class="w-full rounded-lg h-full" alt="Slide 1">
             </div>
-            <div class="carousel-slide">
-                <img src="img/pig.jpg" class="w-full h-full rounded-lg" alt="Slide 2">
+            <div class="carousel-slide h-full w-full">
+                <img src="img/pig.jpg" class="w-full rounded-lg h-full" alt="Slide 2">
             </div>
-            <div class="carousel-slide">
-                <img src="img/maize.jpg" class="w-full h-full rounded-lg" alt="Slide 3">
+            <div class="carousel-slide h-full w-full">
+                <img src="img/maize.jpg" class="w-full rounded-lg h-full" alt="Slide 3">
             </div>
         </div>
     </div>
     <div class="col-span-1">    
-    <div class='w-full col-span-1 relative lg:h-[75vh] h-[50vh] m-auto p-4 border rounded-lg bg-white overflow-scroll'>
+    <div class='w-full col-span-1 relative lg:h-[75vh] h-[50vh] lg:mb-5 mb-[100px] m-auto p-4 border rounded-lg bg-white overflow-scroll'>
     <h1 class="text-black font-bold text-3xl">Recent Post</h1>
     <ul>
     <li class='bg-gray-50 hover:bg-gray-100 rounded-lg my-3 p-2  cursor-pointer'>
@@ -296,9 +296,9 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
     </div>
 </div>
 </div>
-</div>
-</div>
-</div>
+        </div>
+        </div>
+        </div>
    </section>
    <section id="features">
         <div class="container py-20">
@@ -311,8 +311,8 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                <div class="border-2 border-solid border-color-primary text-center   rounded-2xl hover:bg-green-300 ease-in duration-200">
                 <div class="bg-cover bg-no-repeat h-full w-full relative rounded-2xl" style="background-image: url('./img/tomato_farm.jpg');">
                     <div class="absolute bottom-0 px-4 py-3 bg-gray-500/50 w-full">
-                      <h1 class="text-white font-semibold text-4xl"> Kittens are cute </h1>
-                      <p class="text-gray-200">
+                      <h1 class="text-white font-semibold text-4xl lg:block hidden"> Kittens are cute </h1>
+                      <p class="text-gray-200 lg:block hidden">
                         I love kittens very much. They are amazing.
                       </p>
                     </div>
@@ -368,8 +368,8 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <div class="border-2 border-solid border-color-primary text-center   rounded-2xl hover:bg-green-300 ease-in duration-200">
                     <div class="h-full w-full relative rounded-2xl" style="background-image: url('./img/tech_class.jpeg');">
                         <div class="absolute bottom-0 px-4 py-3 bg-gray-500/50 w-full">
-                          <h1 class="text-white font-semibold text-4xl"> Kittens are cute </h1>
-                          <p class="text-gray-200">
+                          <h1 class="text-white font-semibold text-4xl lg:block hidden"> Kittens are cute </h1>
+                          <p class="text-gray-200 lg:block hidden">
                             I love kittens very much. They are amazing.
                           </p>
                         </div>
@@ -383,7 +383,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
     </section>
     <section id="contact-us" class="bg-color-primary py-5">
         <div class="container py-5">
-        <h3 class="lg:text-4xl text-3xl font-bold text-gray-950 text-center mb-5 py-5">Premium Nigerian Rice Sample.<h3>
+        <h3 class="lg:text-4xl text-2xl leading-10 font-bold text-gray-950 text-center mb-5 py-5">Premium Nigerian Rice Sample.<h3>
         <div class="grid lg:grid-cols-2 gap-10 grid-cols-1">
             <div class="">
                 <img src="img/rice_1.png" class="h-[300px] w-full rounded-lg" alt="">
@@ -393,8 +393,8 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="text-xl font-sm text-black mt-5">
                     Explore the Fascinating Lifecycle of Rice - From Seed to Harvest. Discover the beauty and intricacies of rice cultivation in this visual journey through nature's cycles.
                 </p>
-                <p class="mt-5">
-                    <button class="rounded-full bg-gray-600 p-3 text-center w-[30%] hover:bg-gray-800 text-xl font-semibold">Contact Us</button>
+                <p class="mt-5 lg:text-left text-center">
+                    <button class="rounded-full bg-gray-600 p-3 text-center lg:w-[30%] w-[50%] hover:bg-gray-800 text-xl font-semibold">Contact Us</button>
                 </p>
             </div>
         </div>
@@ -405,31 +405,30 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         <div class="container py-20"> 
             <div class="grid lg:grid-cols-4 grid-cols-1 gap-5">
                 <div class="lg:col-span-1 col-span-3">
-                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] w-[30%]">Quick links</h3>
+                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] sm:w-[35%] md:w-[20%] w-[40%]">Quick links</h3>
                     <ul>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">About Us</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Contact Us</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Gallery</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">News</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="about.html">About Us</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="contact.html">Contact Us</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="gallery.html">Gallery</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="news.html">News</a></li>
                     </ul>
                 </div>
                 <div class="lg:col-span-1 col-span-3">
-                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[44%] w-[30%]">Partnership</h3>
+                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] sm:w-[35%] md:w-[20%] w-[40%]">Partnership</h3>
                     <ul>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">About Us</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Contact Us</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Gallery</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">News</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Ministry of Agriculture</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Agricultural Research Council of Nig. Abuja</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Institute for Agricultural Research</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Natural Agency for Agricultural Empowerment</a></li>
                     </ul>
                 </div>
                 <div class="lg:col-span-1 col-span-3">
-                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl lg:w-[80%] w-[50%] font-bold text-2xl">More from NAIMS</h3>
+                    <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl lg:w-[80%] sm:w-[35%] md:w-[50%] w-[68%] font-bold text-2xl">More from NAIMS</h3>
                     <ul>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Statistics</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Publications</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Events</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Login</a></li>
-                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Partners</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="statistics.html">Statistics</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="publications.html">Publications</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="events.html">Events</a></li>
+                        <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="login.html">Login</a></li>
                     </ul>
                 </div>
                 <div class="lg:col-span-1 col-span-3">
@@ -437,7 +436,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                     <div class="text-center m-auto rounded-full mb-2 md:w-full">
                         <form action="" method="post" class="w-full bg-color-primary h-[40px] rounded-lg flex justify-between items-center">
                             <input type="email" placeholder="Enter email" class="w-[80%] h-full border-2 text-black border-none bg-gray-200 pl-5 rounded-l-lg outline-none">
-                            <button type="submit" class="w-[20%]">Submit</button>
+                            <button type="submit" class="w-[20%]">Send</button>
                         </form>
                     </div>
                     <div>
