--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
         <nav class="container w-full h-full bg-color-primary flex lg:flex-col lg:justify-center justify-between">
          <div class="flex items-center" >
             <div class="w-20 py-2 text text-color-secondary font-bold text-3xl">
-                <a href="home.html">
+                <a href="index.html">
                     <img src="img/logo.png" height="100" width="100" alt="">
                 </a>
             </div>
@@ -91,7 +91,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
     <div class="flex flex-wrap">
       <div class="mb-12 w-full shrink-0 grow-0 basis-auto lg:mb-0 lg:w-5/12">
         <div class="flex lg:py-12">
-          <img src="https://mdbcdn.b-cdn.net/img/new/standard/people/058.jpg"
+          <img src="img/tomato_farm.jpg"
             class="z-[10] w-full rounded-lg shadow-lg dark:shadow-black/20 lg:ml-[50px]" alt="image" />
         </div>
       </div>
@@ -109,7 +109,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
             </p>
 
             <div class="mx-auto mb-8 flex flex-col md:flex-row md:justify-around xl:justify-start">
-              <p class="mx-auto mb-4 flex items-center md:mx-0 md:mb-2 lg:mb-0 xl:mr-20">
+              <p class="mx-auto mb-4 flex items-center md:mx-0 text-yellow-400 md:mb-2 lg:mb-0 xl:mr-20">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                   stroke="currentColor" class="mr-2 h-5 w-5">
                   <path stroke-linecap="round" stroke-linejoin="round"
@@ -118,7 +118,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 Best team
               </p>
 
-              <p class="mx-auto mb-4 flex items-center md:mx-0 md:mb-2 lg:mb-0 xl:mr-20">
+              <p class="mx-auto mb-4 flex items-center md:mx-0  text-yellow-400 md:mb-2 lg:mb-0 xl:mr-20">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                   stroke="currentColor" class="mr-2 h-5 w-5">
                   <path stroke-linecap="round" stroke-linejoin="round"
@@ -127,7 +127,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 Best quality
               </p>
 
-              <p class="mx-auto mb-2 flex items-center md:mx-0 lg:mb-0">
+              <p class="mx-auto mb-2 flex items-center md:mx-0  text-yellow-400 lg:mb-0">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                   stroke="currentColor" class="mr-2 h-5 w-5">
                   <path stroke-linecap="round" stroke-linejoin="round"
@@ -164,18 +164,18 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
   <!-- Section: Design Block -->
   <section class="mb-32">
     <div
-      class="block rounded-lg bg-white shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
+      class="block rounded-lg bg-color-primary shadow-[0_2px_15px_-3px_rgba(0,0,0,0.07),0_10px_20px_-2px_rgba(0,0,0,0.04)] dark:bg-neutral-700">
       <div class="flex flex-wrap items-center">
         <div class="block w-full shrink-0 grow-0 basis-auto lg:flex lg:w-6/12 xl:w-4/12">
-          <img src="https://mdbcdn.b-cdn.net/img/new/ecommerce/vertical/012.jpg" alt="Trendy Pants and Shoes"
-            class="w-full rounded-t-lg lg:rounded-tr-none lg:rounded-bl-lg" />
+          <img src="img/g1.jpeg" alt="Trendy Pants and Shoes"
+            class="w-full rounded-t-lg lg:rounded-tr-none  lg:rounded-bl-lg" />
         </div>
         <div class="w-full shrink-0 grow-0 basis-auto lg:w-6/12 xl:w-8/12">
           <div class="px-6 py-12 md:px-12">
             <h2 class="mb-6 pb-2 text-4xl font-bold">
               Why is it so great?
             </h2>
-            <p class="mb-6 pb-2 text-neutral-500 dark:text-neutral-300">
+            <p class="mb-6 pb-2 text-black dark:text-white">
               Nunc tincidunt vulputate elit. Mauris varius purus malesuada
               neque iaculis malesuada. Aenean gravida magna orci, non
               efficitur est porta id. Donec magna diam.
@@ -186,8 +186,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Support
-                  24/7
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Statistics
                 </p>
               </div>
 
@@ -195,7 +194,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Analytics
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Pricing
                 </p>
               </div>
 
@@ -203,22 +202,14 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Components
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Cultivation
                 </p>
               </div>
               <div class="mb-6">
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Updates
-                </p>
-              </div>
-
-              <div class="mb-6">
-                <p class="flex items-center">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                    stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Reports
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Product Accessibility
                 </p>
               </div>
 
@@ -226,14 +217,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Mobile
-                </p>
-              </div>
-              <div class="mb-6">
-                <p class="flex items-center">
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
-                    stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Modules
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Improve Variaties
                 </p>
               </div>
 
@@ -241,7 +225,16 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Blocks
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>
+                    Farmers Education
+                </p>
+              </div>
+              <div class="mb-6">
+                <p class="flex items-center">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+                    stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>
+                    Opportunities
                 </p>
               </div>
 
@@ -249,7 +242,17 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <p class="flex items-center">
                   <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
                     stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>Templates
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>
+                    Publications
+                </p>
+              </div>
+
+              <div class="mb-6">
+                <p class="flex items-center">
+                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="2"
+                    stroke="currentColor" class="mr-3 h-6 w-6 text-neutral-900 dark:text-neutral-100">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 12.75l6 6 9-13.5" /></svg>
+                    Achievements
                 </p>
               </div>
             </div>
@@ -266,31 +269,30 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
     <div class="container py-20"> 
         <div class="grid lg:grid-cols-4 grid-cols-1 gap-5">
             <div class="lg:col-span-1 col-span-3">
-                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] w-[30%]">Quick links</h3>
+                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] sm:w-[35%] md:w-[20%] w-[40%]">Quick links</h3>
                 <ul>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">About Us</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Contact Us</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Gallery</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">News</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="about.html">About Us</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="contact.html">Contact Us</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="gallery.html">Gallery</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="news.html">News</a></li>
                 </ul>
             </div>
             <div class="lg:col-span-1 col-span-3">
-                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[44%] w-[30%]">Partnership</h3>
+                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl font-bold text-2xl lg:w-[50%] sm:w-[35%] md:w-[20%] w-[40%]">Partnership</h3>
                 <ul>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">About Us</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Contact Us</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Gallery</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">News</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Ministry of Agriculture</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Agricultural Research Council of Nig. Abuja</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Institute for Agricultural Research</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Natural Agency for Agricultural Empowerment</a></li>
                 </ul>
             </div>
             <div class="lg:col-span-1 col-span-3">
-                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl lg:w-[80%] w-[50%] font-bold text-2xl">More from NAIMS</h3>
+                <h3 class="text-yellow-500 border-b-4 border-b-color-primary mb-2 lg:text-2xl lg:w-[80%] sm:w-[35%] md:w-[50%] w-[68%] font-bold text-2xl">More from NAIMS</h3>
                 <ul>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Statistics</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Publications</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Events</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Login</a></li>
-                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="#">Partners</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="statistics.html">Statistics</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="publications.html">Publications</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="events.html">Events</a></li>
+                    <li><a class="font-medium text-sm hover:text-color-primary hover:underline" href="login.html">Login</a></li>
                 </ul>
             </div>
             <div class="lg:col-span-1 col-span-3">
@@ -298,7 +300,7 @@ href="https://unpkg.com/swiper/swiper-bundle.min.css"
                 <div class="text-center m-auto rounded-full mb-2 md:w-full">
                     <form action="" method="post" class="w-full bg-color-primary h-[40px] rounded-lg flex justify-between items-center">
                         <input type="email" placeholder="Enter email" class="w-[80%] h-full border-2 text-black border-none bg-gray-200 pl-5 rounded-l-lg outline-none">
-                        <button type="submit" class="w-[20%]">Submit</button>
+                        <button type="submit" class="w-[20%]">Send</button>
                     </form>
                 </div>
                 <div>
